deployments/whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
